# CCapNet

./: CMakeLists.txt  CMakeSettings.json  CMakeUtils.cmake
cnet/platform/: ErrorCode.h  Exception.h  Platform.h  SocketLib.h
cnet/socket/: AddrInfo.h  FDSet.h  Socket.h
